--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portflow</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Nunito:ital,wght@0,200;0,300;0,500;1,600&family=Roboto:wght@300&family=Shippori+Antique&family=Shippori+Antique+B1&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,6 +26,8 @@
                 </nav>
             </div>
         </div>
+    </header>
+    <main>
         <section class="banner">
             <div class="sliders">
                 <div class="slide">
@@ -35,8 +38,6 @@
                 </div>
             </div>
         </section>
-    </header>
-    <main>
             <section class="imagens">
                 <div class="container">
                 <div class="photo">
@@ -129,22 +130,22 @@
     <footer>
         <div class="pe">
             <div class="img-1">
-                <img src="./assets/images/facebook icons.com_65484.png" alt="">
+                <a href="./"><img src="./assets/images/facebook icons.com_65484.png" alt=""></a>
             </div>
             <div class="img-1">
-                <img src="./assets/images/TWITTER_icon-icons.com_65486.png" alt="">
+                <a href="./"><img src="./assets/images/TWITTER_icon-icons.com_65486.png" alt=""></a>
             </div>
             <div class="img-1">
-                <img src="./assets/images/icon insta.png" alt="">
+                <a href="./"><img src="./assets/images/icon insta.png" alt=""></a>
             </div>
             <div class="img-1">
-                <img src="./assets/images/icon telegram.png" alt="">
+                <a href="./"><img src="./assets/images/icon telegram.png" alt=""></a>
             </div>
             <div class="img-1">
-                <img src="./assets/images/icon zap.png" alt="">
+                <a href="./"><img src="./assets/images/icon zap.png" alt=""></a>
             </div>
             <div class="img-1">
-                <img src="./assets/images/YOUTUBE_icon-icons.com_65487.png" alt="">
+                <a href="./"><img src="./assets/images/YOUTUBE_icon-icons.com_65487.png" alt=""></a>
             </div>
         </div>
     </footer>            
